--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "sweetalert2": "^11.15.10",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
