--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.10",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
